--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -14,7 +14,7 @@
         <li><a href="tweets.html">Tweets</a></li>
     </ul>
 </header>
-<body>
+<body class="works_on_smartphone">
 <main>
 
     <article>
