--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -69,7 +69,7 @@
     </article>
 
     <aside>
-        <p>placeholder to add comment thread later</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem incidunt vero eum sunt earum id ad. Ipsum ipsam illum corrupti dolores! Tempore sequi autem est. Possimus suscipit quibusdam iste doloremque.</p>
     </aside>
 
 </main>
