--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <img src="" alt="logo">
+            <img src="/css_advanced/Images/logo image.png" alt="logo">
           
             <ul>
                 <li><a href="#">COURSE</a></li>
@@ -197,7 +197,7 @@
     <footer>
         <section>
             <div>
-                <img src="" alt="logo">
+                <img src="/css_advanced/Images/logo image.png" alt="logo">
                 <div>
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
