--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://kit.fontawesome.com/c466bf54b3.js" crossorigin="anonymous"></script>
     <title>Document</title>
+    <link rel="stylesheet" href="/css_advanced/reset.css">
     <link rel="stylesheet" href="/css_advanced/styles.css">
 </head>
 <body>
@@ -12,7 +13,7 @@
         <nav>
             <img src="/css_advanced/Images/logo image.png" alt="logo">
           
-            <ul>
+            <ul class="nav-links">
                 <li><a href="#">COURSE</a></li>
                 <li><a href="#">PRICING</a></li>
                 <li><a href="#">LOGIN</a></li>
@@ -21,43 +22,43 @@
         
     </header>
     <main>
-        <section>
-            <div>
+        <section class="hero">
+            <div class="hero-content">
                 <h1>Get schooled</h1>
                 <span>SMILES</span>
                 <span>GRIN</span>
                 <span>LAUGH</span>
-                <button>REGISTER FOR FREE</button>
+                <button class="cta-button">REGISTER FOR FREE</button>
             </div>
-            <div>
+            <div class="tagline">
                 <h2>Learn from the pros</h2>
-                <div>
-                    <div>
-                        <img src="" alt="">
+                <div class="instructor">
+                    <div class="instructor-card">
+                        <img src="/css_advanced/Images/firstimage for header.png" alt="Phillip Massey">
                         <h3>Phillip Massey</h3>
-                        <p>« Smile of the year » 2018 - 2019</p>
+                        <p>« Smile of the year »<br> 2018 - 2019</p>
                     </div>
-                    <div>
-                        <img src="" alt="">
+                    <div class="instructor-card">
+                        <img src="/css_advanced/Images/3rdimage.png" alt="Nannie Lawrence">
                         <h3>Nannie Lawrence</h3>
-                        <p>Best « little smile » 2017</p>
+                        <p>Best « little smile »<br> 2017</p>
                     </div>
-                    <div>
-                        <img src="" alt="">
+                    <div class="instructor-card">
+                        <img src="/css_advanced/Images/thirdpic.png" alt="Bruce Walters">
                         <h3>Bruce Walters</h3>
-                        <p>Best « Friend Smile » live performance 2019</p>
+                        <p>Best « Friend Smile »<br> live performance 2019</p>
                     </div>
-                    <div>
-                        <img src="" alt="">
+                    <div class="instructor-card">
+                        <img src="/css_advanced/Images/2nd image.png" alt="Henry Hughes">
                         <h3>Henry Hughes</h3>
-                        <p>« 24h smiles » winner 2016 - 2019</p>
+                        <p>« 24h smiles » winner<br> 2016 - 2019</p>
                     </div>
                 </div>
             </div>
         </section>
         <section>
             <div>
-                <img src="" alt="image">
+                <img src="/css_advanced/Images/2ndsection pic.png" alt="image">
             </div>
             <div>
                 <blockquote>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</blockquote>
@@ -68,11 +69,11 @@
         <section>
             <h2>Most popular tutorials</h2>
             <div>
-                <img src="" alt="">
+                <img src="/css_advanced/Images/diagonalsmile pic.png" alt="Diagonal smile">
                 <h3>Diagonal Smile</h3>
                 <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                 <div>
-                    <img src="" alt="">
+                    <img src="/css_advanced/Images/ratingcomment pic.png" alt="Phillip massey">
                     <h4>Phillip Massey</h4>
                 </div>
                 <div>
@@ -85,11 +86,11 @@
                 <p>8 min</p>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="/css_advanced/Images/happysmile pic.png" alt="Happy smile">
                 <h3>Happy Smile</h3>
                 <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                 <div>
-                    <img src="" alt="">
+                    <img src="/css_advanced/Images/ratingcomment pic.png" alt="Phillip massey">
                     <h4>Phillip Massey</h4>
                 </div>
                 <div>
@@ -102,11 +103,11 @@
                 <p>8 min</p>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="/css_advanced/Images/naturalsmile pic.png" alt="Natural smile">
                 <h3>Natural Smile</h3>
                 <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                 <div>
-                    <img src="" alt="">
+                    <img src="/css_advanced/Images/ratingcomment pic.png" alt="Phillip massey">
                     <h4>Phillip Massey</h4>
                 </div>
                 <div>
@@ -119,11 +120,11 @@
                 <p>8 min</p>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="/css_advanced/Images/sadsmile pic.png" alt="Sad smile">
                 <h3>Sad Smile</h3>
                 <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                 <div>
-                    <img src="" alt="">
+                    <img src="/css_advanced/Images/ratingcomment pic.png" alt="Phillip massey">
                     <h4>Phillip Massey</h4>
                 </div>
                 <div>
@@ -139,22 +140,22 @@
         <section>
             <h2>Free membership</h2>
             <div>
-                <img src="" alt="">
+                <img src="/css_advanced/Images/smileicon.png" alt="Smile icon">
                 <h3>Lorem Ipsum</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="/css_advanced/Images/smileicon.png" alt="Smile icon">
                 <h3>Lorem Ipsum</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="/css_advanced/Images/smileicon.png" alt="Smile icon">
                 <h3>Lorem Ipsum</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="/css_advanced/Images/smileicon.png" alt="Smile icon">
                 <h3>Lorem Ipsum</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
@@ -196,9 +197,9 @@
         </section>
     </main>
     <footer>
-        <section>
+        <section class="footer-content">
             <div>
-                <img src="/css_advanced/Images/logo image.png" alt="logo">
+                <img src="/css_advanced/Images/logo image.png" class="footerimg" alt="logo">
                 <div>
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
