--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -56,23 +56,23 @@
                 </div>
             </div>
         </section>
-        <section>
-            <div>
+        <section class="testimony">
+            <div class="testimony-img">
                 <img src="/css_advanced/Images/2ndsection pic.png" alt="image">
             </div>
-            <div>
+            <div class="testimony-content">
                 <blockquote>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</blockquote>
-                <h3>NAME</h3>
+                <h3>Person Name</h3>
                 <P>weather presenter</P>
             </div>
         </section>
-        <section>
+        <section class="tutorials">
             <h2>Most popular tutorials</h2>
-            <div>
+            <div class="Diagonal ">
                 <img src="/css_advanced/Images/diagonalsmile pic.png" alt="Diagonal smile">
                 <h3>Diagonal Smile</h3>
                 <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                <div>
+                <div class="rating">
                     <img src="/css_advanced/Images/ratingcomment pic.png" alt="Phillip massey">
                     <h4>Phillip Massey</h4>
                 </div>
@@ -85,11 +85,11 @@
                 </div>
                 <p>8 min</p>
             </div>
-            <div>
+            <div class="Happy">
                 <img src="/css_advanced/Images/happysmile pic.png" alt="Happy smile">
                 <h3>Happy Smile</h3>
                 <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                <div>
+                <div class="rating">
                     <img src="/css_advanced/Images/ratingcomment pic.png" alt="Phillip massey">
                     <h4>Phillip Massey</h4>
                 </div>
@@ -102,11 +102,11 @@
                 </div>
                 <p>8 min</p>
             </div>
-            <div>
+            <div class="Natural">
                 <img src="/css_advanced/Images/naturalsmile pic.png" alt="Natural smile">
                 <h3>Natural Smile</h3>
                 <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                <div>
+                <div class="rating">
                     <img src="/css_advanced/Images/ratingcomment pic.png" alt="Phillip massey">
                     <h4>Phillip Massey</h4>
                 </div>
@@ -119,11 +119,11 @@
                 </div>
                 <p>8 min</p>
             </div>
-            <div>
+            <div class="Sad">
                 <img src="/css_advanced/Images/sadsmile pic.png" alt="Sad smile">
                 <h3>Sad Smile</h3>
                 <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                <div>
+                <div class="rating">
                     <img src="/css_advanced/Images/ratingcomment pic.png" alt="Phillip massey">
                     <h4>Phillip Massey</h4>
                 </div>
