--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -137,8 +137,8 @@
                 <p>8 min</p>
             </div>
         </section>
-        <section>
-            <h2>Free membership</h2>
+        <section class="membership">
+            <h2><span>Free</span> membership</h2>
             <div>
                 <img src="/css_advanced/Images/smileicon.png" alt="Smile icon">
                 <h3>Lorem Ipsum</h3>
@@ -159,7 +159,7 @@
                 <h3>Lorem Ipsum</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
-            <button>REGISTER FOR FREE</button>
+            <button class="cta-button">REGISTER FOR FREE</button>
         </section>
         <section>
             <h2>F.A.Q</h2>
